--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 }
 
 .card-content ul {
-    list-style-image: url("smaller_viking.gif");
+    list-style-image: url("https://purdue.brightspace.com/content/enforced/1267911-wl.202520.CIT.31200.001/web_resources/smaller_viking.gif?ou=1267911");
 }
 
 .card-content li {
